--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.commentreplycollection.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.commentreplycollection.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.CommentReplyCollection#add:member(1)'
@@ -36,7 +36,7 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'add(content: CommentRichContent | string, contentType?: Excel.ContentType): Excel.CommentReply;'
+      content: 'add(content: string, contentType?: Excel.ContentType): Excel.CommentReply;'
       return:
         type:
           - 'excel!Excel.CommentReply:class'
@@ -57,11 +57,11 @@ items:
           ```
       parameters:
         - id: content
-          description: '批注的内容。 它可以是字符串或接口 CommentRichContent （例如，对于包含提及的注释）。 \[Api 集： ExcelApi 1.10 for string，ExcelApiOnline 1.1 for CommentRichContent 对象\]'
+          description: '批注的内容。 它可以是字符串或接口 CommentRichContent （例如，用于包含提及的注释）。 \[Api 集： ExcelApi 1.10 for string，1.11 （针对 CommentRichContent 对象）\]'
           type:
-            - 'excel!Excel.CommentReplyCollection#add~0:complex'
+            - string
         - id: contentType
-          description: '可选。 包含在注释中的内容类型。 默认值为枚举`ContentType.Plain`<!-- -->. \[Api 集：枚举 contenttype 的 ExcelApi 1.10 （纯，ExcelApiOnline 1.1 用于枚举 ContentType）。提及\]'
+          description: '可选。 包含在注释中的内容类型。 默认值为枚举`ContentType.Plain`<!-- -->. \[Api 集：枚举 ContentType 的 ExcelApi 1.10。纯，1.11 用于枚举 ContentType。提及\]'
           type:
             - 'excel!Excel.ContentType:enum'
   - uid: 'excel!Excel.CommentReplyCollection#add:member(2)'
@@ -75,18 +75,18 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'add(content: CommentRichContent | string, contentTypeString?: "Plain" | "Mention"): Excel.CommentReply;'
+      content: 'add(content: string, contentTypeString?: "Plain" | "Mention"): Excel.CommentReply;'
       return:
         type:
           - 'excel!Excel.CommentReply:class'
         description: ''
       parameters:
         - id: content
-          description: '批注的内容。 它可以是字符串或接口 CommentRichContent （例如，对于包含提及的注释）。 \[Api 集： ExcelApi 1.10 for string，ExcelApiOnline 1.1 for CommentRichContent 对象\]'
+          description: '批注的内容。 它可以是字符串或接口 CommentRichContent （例如，用于包含提及的注释）。 \[Api 集： ExcelApi 1.10 for string，1.11 （针对 CommentRichContent 对象）\]'
           type:
-            - 'excel!Excel.CommentReplyCollection#add~1:complex'
+            - string
         - id: contentTypeString
-          description: '可选。 包含在注释中的内容类型。 默认值为枚举`ContentType.Plain`<!-- -->. \[Api 集：枚举 contenttype 的 ExcelApi 1.10 （纯，ExcelApiOnline 1.1 用于枚举 ContentType）。提及\]'
+          description: '可选。 包含在注释中的内容类型。 默认值为枚举`ContentType.Plain`<!-- -->. \[Api 集：枚举 ContentType 的 ExcelApi 1.10。纯，1.11 用于枚举 ContentType。提及\]'
           type:
             - '"Plain" | "Mention"'
   - uid: 'excel!Excel.CommentReplyCollection#context:member'
@@ -119,7 +119,7 @@ items:
         description: ''
   - uid: 'excel!Excel.CommentReplyCollection#getItem:member(1)'
     summary: |-
-      返回由其 ID 标识的批注回复。 只读。
+      返回由其 ID 标识的批注回复。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(commentReplyId)
@@ -224,7 +224,7 @@ items:
         - id: propertyNamesAndPaths
           description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.CommentReplyCollection#toJSON:member(1)'
     summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.CommentReplyCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.CommentReplyCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
@@ -239,37 +239,19 @@ items:
           - 'excel!Excel.Interfaces.CommentReplyCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.CommentReply:class'
     name: Excel.CommentReply
-  - uid: 'excel!Excel.CommentReplyCollection#add~0:complex'
-    name: CommentRichContent | string
-    fullName: Excel.CommentRichContent | string
-    spec.typeScript:
-      - uid: 'excel!Excel.CommentRichContent:interface'
-        name: CommentRichContent
-        fullName: Excel.CommentRichContent
-      - name: ' | string'
-        fullName: ' | string'
   - uid: 'excel!Excel.ContentType:enum'
     name: Excel.ContentType
-  - uid: 'excel!Excel.CommentReplyCollection#add~1:complex'
-    name: CommentRichContent | string
-    fullName: Excel.CommentRichContent | string
-    spec.typeScript:
-      - uid: 'excel!Excel.CommentRichContent:interface'
-        name: CommentRichContent
-        fullName: Excel.CommentRichContent
-      - name: ' | string'
-        fullName: ' | string'
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
   - uid: 'excel!Excel.CommentReplyCollection#getCount~0:complex'
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -297,7 +279,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.CommentReplyCollectionData:interface'
     name: Excel.Interfaces.CommentReplyCollectionData
