--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.rangeformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.rangeformatdata.yml
@@ -20,7 +20,7 @@ items:
       - 'excel!Excel.Interfaces.RangeFormatData#wrapText:member'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#borders:member'
     summary: |-
-      应用于整个区域的 Border 对象的集合。 只读。
+      应用于整个区域的 Border 对象的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borders
@@ -35,7 +35,7 @@ items:
           - 'excel!Excel.Interfaces.RangeFormatData#borders~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#columnWidth:member'
     summary: |-
-      获取或设置区域内的所有列的宽度。 如果列宽不统一，则返回 NULL。
+      指定区域中所有 colums 的宽度。 如果列宽不统一，则返回 NULL。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnWidth
@@ -50,7 +50,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFormatData#fill:member'
     summary: |-
-      返回在整个区域内定义的 fill 对象。 只读。
+      返回在整个区域内定义的 fill 对象。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
@@ -65,7 +65,7 @@ items:
           - 'excel!Excel.Interfaces.RangeFillData:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#font:member'
     summary: |-
-      返回在整个区域内定义的 Font 对象。 只读。
+      返回在整个区域内定义的 Font 对象。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
@@ -95,7 +95,7 @@ items:
           - 'excel!Excel.Interfaces.RangeFormatData#horizontalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#protection:member'
     summary: |-
-      返回某一区域的格式 protection 对象。 只读。
+      返回某一区域的格式 protection 对象。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
@@ -110,7 +110,7 @@ items:
           - 'excel!Excel.Interfaces.FormatProtectionData:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#rowHeight:member'
     summary: |-
-      获取或设置区域中所有行的高度。 如果行高不一致，则将返回 null。
+      区域中所有行的高度。 如果行高不一致，则将返回 null。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowHeight
@@ -140,7 +140,7 @@ items:
           - 'excel!Excel.Interfaces.RangeFormatData#verticalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#wrapText:member'
     summary: |-
-      指示 Excel 是否将对象中的文本换行。 指示整个区域不具有统一换行设置的空值
+      指定 Excel 是否对对象中的文本进行换行。 指示整个区域不具有统一换行设置的空值
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
