--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.worksheet.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.worksheet.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.Worksheet#activate:member(1)'
@@ -75,7 +75,7 @@ items:
           ```
   - uid: 'excel!Excel.Worksheet#charts:member'
     summary: |-
-      返回作为工作表的一部分的图表的集合。 只读。
+      返回作为工作表的一部分的图表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: charts
@@ -444,7 +444,7 @@ items:
             - boolean
   - uid: 'excel!Excel.Worksheet#id:member'
     summary: |-
-      返回用于唯一标识指定工作簿中工作表的值。即使工作表被重命名或移动，标识符的值仍然相同。只读。
+      返回用于唯一标识指定工作簿中工作表的值。 即使工作表被重命名或移动，标识符的值仍然相同。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -556,7 +556,7 @@ items:
           - string
   - uid: 'excel!Excel.Worksheet#names:member'
     summary: |-
-      一组范围限定到当前工作表的名称。 只读。
+      一组范围限定到当前工作表的名称。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: names
@@ -571,7 +571,7 @@ items:
           - 'excel!Excel.NamedItemCollection:class'
   - uid: 'excel!Excel.Worksheet#pivotTables:member'
     summary: |-
-      一组属于 worksheet 的 PivotTable 对象。 只读。
+      一组属于工作表的数据透视表对象。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTables
@@ -620,7 +620,7 @@ items:
           ```
   - uid: 'excel!Excel.Worksheet#protection:member'
     summary: |-
-      返回表工作表的工作表保护对象。 只读。
+      返回表工作表的工作表保护对象。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
@@ -695,7 +695,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.Worksheet#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -716,7 +716,7 @@ items:
             - 'excel!Excel.Worksheet:class'
   - uid: 'excel!Excel.Worksheet#tables:member'
     summary: |-
-      属于工作表的表的集合。 只读。
+      属于工作表的表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
@@ -758,7 +758,7 @@ items:
         type:
           - 'excel!Excel.Worksheet#visibility~0:complex'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartCollection:class'
     name: Excel.ChartCollection
@@ -778,7 +778,7 @@ references:
     name: Excel.WorksheetProtection
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData:interface'
     name: Interfaces.WorksheetUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.TableCollection:class'
     name: Excel.TableCollection
